# osdev

kern/: Cargo.toml
kern/.cargo/: config
kern/src/: log.rs  main.rs
kern/src/arch/x86_64/: gdt.rs  idt.rs  mod.rs  pic.rs  print.rs  vga_text.rs
kern/src/arch/x86_64/mem/: alloc.rs  paging.rs
kern/src/arch/x86_64/pci/: mod.rs
kern/src/arch/x86_64/task/: executor.rs  keyboard.rs  mod.rs  mouse.rs
kern/src/arch/x86_64/video/: bochs.rs  mod.rs
kern/src/schema/: sys.rs
lib-kern/: Cargo.toml
lib-kern/src/: ansi.rs  io.rs  lib.rs  schema.rs  video.rs
lib-kern/src/dom/: color.rs  css.rs  layout.rs  mod.rs  painting.rs  style.rs
lib-kern/src/dom/parser/: html.rs
lib-kern/src/gfx/: common.rs  font.rs  mod.rs  rect.rs
lib-kern/src/schema/: driver.rs  file.rs  map.rs  mod.rs
