[package]
name = "osdev"
version = "0.1.0"
authors = ["Andrei Dimitriu @chronium <author@aatbe-lang.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.11.1"
uart_16550 = "0.2.7"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.1"
linked_list_allocator = "0.8.4"
spinning = { version = "0.0.3", default-features = false }
hashbrown = "0.8.1"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2.3"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.1"
default-features = false

[dependencies.futures-util]
version = "0.3.5"
default-features = false
features = ["alloc"]

[dependencies.lib-kern]
path = "../lib-kern"

[package.metadata.bootimage]
run-command = [
    "qemu-system-x86_64",
    "-drive",
    "format=raw,file={}",
    "-m",
    "1G",
    "-serial",
    "stdio",
    "-device",
    "virtio-net-pci",
]
