[package]
name = "lib-kern"
version = "0.1.0"
authors = ["Andrei Dimitriu @chronium <author@aatbe-lang.com>"]
edition = "2018"

[lib]
name = "lib_kern"
path = "src/lib.rs"
test = false
crate-type = ["lib"]

[dependencies]
spinning = { version = "0.0.3", default-features = false }
libm = { version = "0.2.1", default-features = false }
owned_ttf_parser = { default-features = false }
rusttype = { version = "0.9.2", default-features = false, features = ["libm-math"] }
